[package]
name = "bugcrowd_api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
dateparser = "0.2.1"
log.workspace = true
reqwest.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
tokio.workspace = true
