[package]
name = "bugcrowd_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bugcrowd_api = { version = "0.1.0", path = "../bugcrowd_api" }
log.workspace = true
redis = { version = "0.32.2", features = ["aio", "connection-manager", "tokio-comp"] }
reqwest.workspace = true
serde_json = "1.0.140"
tokio.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures = "0.3.31"
